--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <style media="screen">
       html,body {height:100%}
     </style>
+    <link rel="stylesheet" href="style.css">
     <script src="right-click.js"></script>
   </head>
   <body>
