menu items are dymanic and for the checkmarks that are enabled. selecting a text without the menu will bold it

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <style media="screen">
       html,body {height:100%}
     </style>
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style.css"><br><br><br><br>
+     <p>SOme text to eventually select</p>
     <script src="right-click.js"></script>
   </head>
   <body>
