Bold and unbold works and elements as well as parentselements

--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html>
   <head>
     <!-- make hieght of the page big -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style media="screen">
       html,body {height:100%}
     </style>
      <link rel="stylesheet" href="style.css"><br><br><br><br>
+     <div class="btn-group">
+        <button type="button" class="btn btn-primary disabled"><i class="material-icons">cloud</i></button>
+        <button type="button" class="btn btn-primary active">Samsung</button>
+        <button type="button" class="btn btn-primary active">Sony</button>
+      </div>
      <p>SOme text to eventually select</p>
+     <i class="material-icons">cloud</i>
     <script src="right-click.js"></script>
   </head>
   <body>
