--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <!-- make hieght of the page big -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
     <style media="screen">
       html,body {height:100%}
     </style>
@@ -15,7 +15,9 @@
         <button type="button" class="btn btn-primary active">Samsung</button>
         <button type="button" class="btn btn-primary active">Sony</button>
       </div>
-     <p>SOme text to eventually select</p>
+     <p>SOme text to eve<p> an element </p> ntually select</p>
+     <p >Ome text to easdasdve<p> an asdasda <b>sde</b> lement </p> ntuaadsasdasdlly select</p>
+    <p >testing asdasdasdasthe <p> an easda<span class="bold-class">SPAN TEST</span>asdlement </p> ntualasdasdasdasdasdly select</p>
      <i class="material-icons">cloud</i>
     <script src="right-click.js"></script>
   </head>
