--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,5 @@
 <html>
   <button id="mybutton">click me</button>
-  <script>
-    var greeting = "hello, ";
-    var button = document.getElementById("mybutton");
-    button.person_name = "Bob";
-    button.addEventListener("click", function() {
-      alert(greeting + button.person_name + ".");
-    }, false);
-  </script>
+  <input type="checkbox" name="vehicle" value="Bike" id="checkbos"> I have a bike<br>
+ <script src="popup.js"></script>
 </html>
